@@ -7,6 +7,8 @@ Gora Change Log
 0.2 Release: 20/04/2012
 Jira Release Report: https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311172&version=12315541
  
+* GORA-120 Dirty fields are not correctly applied after serialization and map clearance (ferdy)
+ 
 * GORA-115 Flushing HBaseStore should flush all HTable instances. (ferdy)
 
 * Make hbase autoflush default to false and make autoflush configurable rather than hardcoded (stack via lewismc)
